# cljby-haskell-crud

./: .gitignore  .stylish-haskell.yaml  LICENSE  README.md  build-tags.sh  cljby-haskell-crud.cabal  stack.yaml
app/: Main.hs
src/: Lib.hs  Utils.hs
