name:                cljby-haskell-crud
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/sbinq/cljby-haskell-crud#readme
license:             BSD3
license-file:        LICENSE
author:              Stas Binko
maintainer:          stas.binko@gmail.com
copyright:           sbinq
category:            Playground
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable cljby-haskell-crud-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Spock >= 0.10
                     , cljby-haskell-crud
  default-language:    Haskell2010

test-suite cljby-haskell-crud-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , cljby-haskell-crud
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sbinq/cljby-haskell-crud
